# telegram-bot

./: .env  .env.example  .gitignore  README.md  basic.py  botprogram.py  main.py  main2.py  pronombres.csv  pyproject.toml  users.json
osuc_companion/: __main__.py  settings.py
osuc_companion/bot/: __init__.py  chats.py  conversation.py  greet_users.py
osuc_companion/text/: replies.json
osuc_companion/utilities/: write_json.py
utilities/: chats.py  conversation.py  greet_users.py  track_chats.py  write_json.py
